\name{NEWS}
\title{News for Package \pkg{GECO}}

\section{Changes in version 0.1.6}{
\itemize{
    \item Vignette updates.
}}

\section{Changes in version 0.1.5}{
\itemize{
    \item Reduced supplied dataset size and provided full vignette.
}}

\section{Changes in version 0.1.4}{
\itemize{
    \item Adding toy data to allow users to test the package.
}}

\section{Changes in version 0.1.3}{
\itemize{
    \item Initial setup for future BioConductor submission.
}}