@@ -1,6 +1,6 @@
 Package: GECO
 Title: A metric to determine the biological quality of gene clusters
-Version: 0.1.6
+Version: 0.1.7
 Authors@R: 
     person(given = "Jason",
            family = "Bennett",
