@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(GECO_score)
 export(assess_quality)
 export(generate_clusters)
 export(score_clusters)
